Fix layout problem with modals vs. nav and notifications
Addresses #1807, but a clean CSS solution would be preferable.

--- a/app/assets/stylesheets/modules/_course.styl
+++ b/app/assets/stylesheets/modules/_course.styl
@@ -6,9 +6,6 @@
     margin-bottom 0px
     margin-top 0px
 
-.course_main 
-  z-index 0
-  
 .course
   background #fff
   border 1px solid $border_lt
